--- a/resources/ToDo.txt
+++ b/resources/ToDo.txt
@@ -1,33 +1,37 @@
-1)Tanto en crear proyecto como en asignar o desasignar empleado al ver el proyecto crear
-botonera con logica para ir agregando los empleados libres del pool. Con un boton on +
-que agregue mas Jlbl.
+0)Lugares botones: poolEMpleados WEST,Agregar Modificar Borrar Ver NORTH, Tareas South
+1)TERMINAR LOGICA DE FRMPROYECTO PARA QUE PERSISTA LOS DATOS DE LA LISTA 
+DE EMPLADOS ASIGNADOS EN MEMORIA DINAMICA
 
-2)Unificar VerTarea y VerEMpleados en un boton que sea Ver Proyecto. Este sera un Jpanel
-dividido en SOuth y North con la pantallita de  empleados y tareas.
-La parte de empleado deberia tener un boton de asignar o desasignar.
+2)TERMINAR EL ASIGNAR/DESASIGNAR PARA QUE FUNCIONE AL MODIFICAR 
+UN PROYECTO TAMBIEN.PARA ESTO VOY A TENER QUE MODIFICAR EL CARGARTABLA DE FRMPROYECTO
 
-3)Agregar pantalla de pool con todos los empleados. Aca se agregan borra o modifican empleados.
+3)Ver por que empleados aparecen como ocupados al mostrarlos en las listas.
 
-4)Ver todas las relaciones de empleado<-> proyecto posibles.
+4)EL BOTON VER PASARA A TENER LA PANTALLITA CON EL TITULO, LAS TAREAS Y LOS EMPLEADOS ABAJO
 
-5)Ver logica al borrar proyecto, que pida confirmacion si tiene tareas en curso y empelados queden libres y tareas borradas.
+5)Agregar pantalla de pool con todos los empleados. Aca se agregan borra o modifican empleados.
 
-6)Al agregar tarea que se agregue directamente el proyecto seleccionado.
+6)Terminar dropdowns en todos lados de asignaciones. Ver bien lo que hay q listar.
+En asignar/desasignar empleados tiene que mostrar los q esten libres en la BD.
+
+7)Ver todas las relaciones de empleado <-> proyecto posibles.
+
+8)Ver logica al borrar proyecto, que pida confirmacion si tiene tareas en curso y empelados queden libres y tareas borradas.
+
+9)Al agregar tarea que se agregue directamente el proyecto seleccionado.
 Se podria agregar a otro q no sea en el que estoy parado
 
-7)No se puede cambiar empleado de proyecto si tiene tarea asignada, al igual que no se puede
+10)No se puede cambiar empleado de proyecto si tiene tarea asignada, al igual que no se puede
 cambiar tarea de proyecto si tiene empleado asignado de ese proyecto.
 
-8)Agregar Timestamp para la clase Estado y en BD.
-	
-9)Clase FrmTarea: terminar dropdowns en metodos comentados en actionPerformed.
+11)Agregar Timestamp para la clase Estado y en BD.
 
-10)Mostrar el historial de estados de las tareas.. 
+12)Mostrar el historial de estados de las tareas.. 
 
-11)Manejo de errores poco descriptivo y mal nombre de parametros.
+13)Manejo de errores poco descriptivo y mal nombre de parametros.
 Manejar bien los errores tipo LABO2.
 
-12) Q&A de campos null y refactorizar para no repetir codigo.
+14)Q&A de campos null y refactorizar para no repetir codigo.
 
 
 
@@ -41,3 +45,16 @@ Manejar bien los errores tipo LABO2.
 1)EL ESTADO NO LO DEBERIA PODER CAMBIAR. QUE SEA UN Jlbl.
 
 2)Empleado puede tener mas de una tarea. Cambiar logica de ocupado dependeinedo el proyecto y no la tarea.
+
+3)Logica para que si el empleado ya esta en la memoria diga que ya esta.
+Pero si apreta desasignar qe lo desasigne.
+
+4)Mostrar lista de empleados asignados en pantalla de crear proyecto
+
+5)Asignar/desasignar:
+1-Crear el proyecto
+Va a trabajar solo con una Lista en memoria y al guardar el form que cree el proyecto primero
+y despues asigne los empleados de la lista asi ya puedo tener el Id del proyecto. 
+2-Modificar Proyecto
+Para cuando el proyecto ya esta creado, el asignar/desasignar va a tener que trabajr 
+con la BD en vez de la lista en memoria.
